# py_awesome

./: README.md  setup.cfg  setup.py
.github/workflows/: workflow.yml
example/adventure-main/: main.py
example/adventure-main/src/characters/: monster.py  player.py
example/adventure-main/src/configs/: assets.py
example/adventure-main/src/map/: block.py  box.py  circle_struct.py  collision_box.py
example/adventure-main/src/states/: about.py  home.py  loose.py  pause.py  play.py  setting.py  win.py
py_awesome/: __init__.py
py_awesome.egg-info/: PKG-INFO  SOURCES.txt
py_awesome/core/: assets.py  local_strorage.py
py_awesome/py_awesome.egg-info/: PKG-INFO  SOURCES.txt
