[metadata]
name=py_awesome
download_url=https://github.com/alexcao194/py_awesome
description=Awesome Python Package to build games
long_description=file:README.md
long_description_content_type=text/markdown
author=Alexcao
author_email=alexcao194@gmail.com
maintainer=Alexcao
maintainer_email=alexcao194@gmail.com
url=https://github.com/alexcao194/py_awesome
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation

[options]
packages=
    py_awesome
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
#install_requires=
#    <your-dependency-lib-1>
#    <your-dependency-lib-2>

[options.entry_points]
console_scripts =
    gen = py_awesome.gen:gen

[bdist_wheel]
universal=1