[command]
option = value

[metadata]
name = py_awesome
version = 0.0.1
author = alexcao
author_email = alexcao194@gmail.com
description = short package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexcao194/py_awesome/archive/refs/tags/test.tar.gz
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = py_awesome
packages = find:
python_requires = >=3.6

[options.packages.find]
where = py_awesome